added reflection textfield

--- a/Pollution Cases/judiciary_air_pollution - kasturi/judgment/templates/judgment/Results.html
+++ b/Pollution Cases/judiciary_air_pollution - kasturi/judgment/templates/judgment/Results.html
@@ -334,6 +334,12 @@
                 </div>
               </div>
 
+              <div class="form-group">
+                <div class="row">
+                {% formfield player.reflection %}
+                </div>
+              </div>
+
 
           </form>
           {% next_button %}
